--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Canopy Café Menu</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
   <style>
     :root {
       --primary: #2d2d2d;
@@ -32,11 +33,6 @@
       align-items: center;
       padding: 20px;
       background-color: var(--accent);
-    }
-
-    header img {
-      height: 100px;
-      margin-right: 20px;
     }
 
     header h1 {
@@ -93,6 +89,27 @@
       font-style: italic;
     }
 
+    #qr-container {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    #qrCanvas {
+      margin-top: 20px;
+    }
+
+    #downloadQRButton {
+      margin-top: 20px;
+      background-color: var(--accent);
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      font-family: 'Playfair Display', serif;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
     @media (max-width: 600px) {
       header h1 {
         font-size: 2rem;
@@ -110,76 +127,39 @@
 </head>
 <body>
   <header>
-    
     <h1>Canopy Café Menu</h1>
   </header>
+
   <div class="menu">
-    <div class="section">
-      <h2>Brownies</h2>
-      <div class="item"><span>Nutella Browine</span><span class="price">110/-</span></div>
-      <div class="item"><span>Brownie with ice cream</span><span class="price">110/-</span></div>
-      <div class="item"><span>Tahini Swirl Brownie</span><span class="price">120/-</span></div>
-      <div class="item"><span>Salted Caramel Pretzel Brownie</span><span class="price">130/-</span></div>
-      <div class="item"><span>Matcha Almond Blondie</span><span class="price">130/-</span></div>
-      <div class="item"><span>Red Wine Brownie</span><span class="price">150/-</span></div>
-    </div>
+    <!-- Your menu sections here (as you provided) -->
 
-    <div class="section">
-      <h2>Cakes</h2>
-      <div class="item"><span>Vanilla Sky</span><span class="price">180/-</span></div>
-      <div class="item"><span>Choco Noir</span><span class="price">200/-</span></div>
-      <div class="item"><span>Velvet Eclipse</span><span class="price">200/-</span></div>
-      <div class="item"><span>Berry Whisper</span><span class="price">200/-</span></div>
-      <div class="item"><span>Nutcracker's Delight</span><span class="price">210/-</span></div>
-      <div class="item"><span>Midnight Bloom</span><span class="price">220/-</span></div>
-      <div class="item"><em>Customise Tasty Cakes for your events</em></div>
-    </div>
-
-    <div class="section">
-      <h2>Signature Coffees</h2>
-      <div class="item"><span>Maple Whisper</span><span class="price">170/-</span></div>
-      <div class="item"><span>Honeycomb Cold brew</span><span class="price">180/-</span></div>
-      <div class="item"><span>Brown Sugar Ice Storm</span><span class="price">180/-</span></div>
-      <div class="item"><span>Iced Matcha Clouds</span><span class="price">190/-</span></div>
-      <div class="item"><span>Midnight Mocha</span><span class="price">190/-</span></div>
-      <div class="item"><span>Tiramisu Latte</span><span class="price">200/-</span></div>
-    </div>
-
-    <div class="section">
-      <h2>Smoothies & Refreshers</h2>
-      <div class="item"><span>Berry Hibiscus Cooler</span><span class="price">160/-</span></div>
-      <div class="item"><span>Green Fix</span><span class="price">170/-</span></div>
-      <div class="item"><span>Tropical Glow</span><span class="price">180/-</span></div>
-      <div class="item"><span>Sunset Swirl</span><span class="price">180/-</span></div>
-      <div class="item"><span>Berry Zen</span><span class="price">180/-</span></div>
-    </div>
-
-    <div class="section">
-      <h2>Gourmet Sandwiches & Wraps</h2>
-      <div class="item"><span>Eggstatic Melt</span><span class="price">220/-</span></div>
-      <div class="item"><span>The Big Bird</span><span class="price">240/-</span></div>
-      <div class="item"><span>Tandoori Chicken Toastie</span><span class="price">250/-</span></div>
-      <div class="item"><span>Korean Fire Wrap</span><span class="price">270/-</span></div>
-      <div class="item"><span>Smoky Swine Sandwich</span><span class="price">280/-</span></div>
-    </div>
-
-    <div class="section">
-      <h2>Small Plates & Café Bites</h2>
-      <div class="item"><span>Crispy Cajun Wings</span><span class="price">220/-</span></div>
-      <div class="item"><span>Sticky Korean Chicken Pops</span><span class="price">230/-</span></div>
-      <div class="item"><span>Chicken Keema Nachos</span><span class="price">250/-</span></div>
-      <div class="item"><span>BBQ Chicken Quesadilla</span><span class="price">260/-</span></div>
-      <div class="item"><span>Garlic Butter Shrimp Skillet</span><span class="price">280/-</span></div>
-    </div>
-
-    <div class="section">
-      <h2>K-Ramyeon Specials</h2>
-      <div class="item"><span>Seoul Fire Bowl</span><span class="price">220/-</span></div>
-      <div class="item"><span>K-Drama Comfort</span><span class="price">240/-</span></div>
-      <div class="item"><span>Cheese Snow Ramyeon</span><span class="price">260/-</span></div>
-      <div class="item"><span>Tteokbokki Ramyeon Fusion</span><span class="price">260/-</span></div>
-      <div class="item"><span>Dak-Galbi Twist</span><span class="price">280/-</span></div>
+    <!-- QR Code Section -->
+    <div id="qr-container">
+      <h2>Scan to View Online</h2>
+      <canvas id="qrCanvas"></canvas><br>
+      <button id="downloadQRButton" onclick="downloadQR()">Download QR Code</button>
     </div>
   </div>
+
+  <script>
+    // Replace with your hosted URL if different
+    const menuUrl = "https://sam040804.github.io/Canopymenu/";
+
+    // Generate QR code
+    const qr = new QRious({
+      element: document.getElementById('qrCanvas'),
+      value: menuUrl,
+      size: 200
+    });
+
+    // Download QR code as PNG
+    function downloadQR() {
+      const canvas = document.getElementById('qrCanvas');
+      const link = document.createElement('a');
+      link.download = 'CanopyCafe-Menu-QR.png';
+      link.href = canvas.toDataURL("image/png");
+      link.click();
+    }
+  </script>
 </body>
 </html>
